# thumbtack

./: .gitignore  .gitlab-ci.yml  .readthedocs.yaml  .travis.yml  LICENSE  MANIFEST.in  README.rst  Vagrantfile  apistar.yml  gunicorn.conf.py  requirements.txt  schema.yaml  setup.cfg  setup.py  tasks.py  wsgi.py
.github/: dependabot.yml
.github/workflows/: deploy.yml  test.yml  thumbtack-actions.yml  thumbtack_workflow.yml
docker/: docker-compose.yml.template
docker/thumbtack/: Dockerfile  entrypoint.sh
docs/: Makefile  README.md  about.rst  api_guide.rst  conf.py  index.rst  quickstart.rst  screenshots.rst  thumbtack_client.rst  tutorial.rst  web_interface.rst
docs/releasenotes/: 0.1.0.rst  0.1.1.rst  0.1.2.rst  0.1.3.rst  0.2.0.rst  0.3.0.rst  0.3.1.rst  0.3.2.rst  0.3.4.rst  0.4.0.rst  0.5.0.rst  0.5.1.rst  0.5.2.rst  0.5.3.rst  0.5.5.rst  0.5.6.rst  0.5.7.rst  index.rst
docs/source/: modules.rst  thumbtack.rst
provisioning/: install.sh
src/thumbtack/: __init__.py  config.py  directory_monitoring.py  exceptions.py  resources.py  utils.py  views.py
src/thumbtack/static/css/: thumbtack.css
src/thumbtack/static/js/: thumbtack.js
src/thumbtack/templates/: base.html  form_complete.html  index.html
tests/: conftest.py  download-test-images.py  expected-test-results.json  generate-test-expected-results.py
tests/unit/: test_mounts.py
thumbtack/: __init__.py  config.py  exceptions.py  manager.py  resources.py  utils.py  views.py
thumbtack/static/css/: thumbtack.css
thumbtack/templates/: base.html  index.html
