[bumpversion]
current_version = 0.5.5
commit = True
tag = True
tag_name = {new_version}

[bumpversion:file:docs/conf.py]

[bumpversion:file:setup.py]

[bumpversion:file:schema.yaml]

[bumpversion:file:docker/thumbtack/Dockerfile]

[bumpversion:file:docker/docker-compose.yml.template]

[metadata]
license_file = LICENSE

[bdist_wheel]
universal = 1

[options]
package_dir = 
	=src
packages = find:

[options.packages.find]
where = src
